<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen"
    android:background="@color/colorHomeBackground">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        card_view:cardBackgroundColor="@color/colorCardBackgroundDark"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        card_view:cardCornerRadius="6dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <ImageView
                android:id="@+id/home-icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/home-welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/colorText"
                android:text="@string/home_welcome"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                card_view:layout_constraintTop_toBottomOf="@id/home-icon"/>

            <TextView
                android:id="@+id/home-text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_text"
                android:textSize="14sp"
                card_view:layout_constraintTop_toBottomOf="@+id/home-welcome"
                card_view:layout_constraintLeft_toLeftOf="parent"
                card_view:layout_constraintRight_toRightOf="parent" />

            <android.support.v7.widget.CardView
                android:id="@+id/home-search-bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:layout_constraintTop_toBottomOf="@+id/home-text"
                android:layout_marginTop="2dp"
                card_view:cardBackgroundColor="@color/colorCardBackgroundLight">

                <SearchView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </SearchView>

            </android.support.v7.widget.CardView>



            <android.support.v7.widget.CardView
                android:id="@+id/home-bar-icon"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                card_view:layout_constraintLeft_toLeftOf="parent"
                card_view:cardBackgroundColor="@color/colorCardBackgroundLight"
                card_view:layout_constraintTop_toBottomOf="@+id/home-search-bar"
                card_view:layout_constraintRight_toLeftOf="@id/home-search-icon"
                android:layout_marginTop="12dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="98dp">

                    <ImageView
                        android:id="@+id/home-bar"
                        android:layout_width="45dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/bars"
                        card_view:layout_constraintLeft_toLeftOf="parent"
                        card_view:layout_constraintRight_toRightOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/home_icon_bar_text"
                        android:textSize="20sp"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintLeft_toLeftOf="parent"
                        card_view:layout_constraintRight_toRightOf="parent" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/home-search-icon"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="@color/colorCardBackgroundLight"
                card_view:layout_constraintTop_toBottomOf="@+id/home-search-bar"
                android:layout_marginTop="12dp"
                card_view:layout_constraintRight_toRightOf="parent"
                card_view:layout_constraintLeft_toRightOf="@id/home-bar-icon">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="98dp">

                    <ImageView
                        android:id="@+id/home-search"
                        android:layout_width="45dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/icon_search"
                        card_view:layout_constraintLeft_toLeftOf="parent"
                        card_view:layout_constraintRight_toRightOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/home_icon_search_text"
                        android:textSize="15sp"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintLeft_toLeftOf="parent"
                        card_view:layout_constraintRight_toRightOf="parent" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/home-star-icon"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                card_view:layout_constraintLeft_toLeftOf="parent"
                card_view:cardBackgroundColor="@color/colorCardBackgroundLight"
                card_view:layout_constraintTop_toBottomOf="@+id/home-search-bar"
                card_view:layout_constraintRight_toLeftOf="@id/home-open-book-icon"
                android:layout_marginTop="120dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="98dp">

                    <ImageView
                        android:id="@+id/home-star"
                        android:layout_width="45dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_star"
                        card_view:layout_constraintLeft_toLeftOf="parent"
                        card_view:layout_constraintRight_toRightOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/home_icon_star_text"
                        android:textSize="20sp"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintLeft_toLeftOf="parent"
                        card_view:layout_constraintRight_toRightOf="parent" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/home-open-book-icon"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="@color/colorCardBackgroundLight"
                card_view:layout_constraintTop_toBottomOf="@+id/home-search-bar"
                android:layout_marginTop="120dp"
                card_view:layout_constraintRight_toRightOf="parent"
                card_view:layout_constraintLeft_toRightOf="@id/home-bar-icon">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="98dp">

                    <ImageView
                        android:id="@+id/home-open-book"
                        android:layout_width="45dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/obooks"
                        card_view:layout_constraintLeft_toLeftOf="parent"
                        card_view:layout_constraintRight_toRightOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/home_icon_open_book_text"
                        android:textSize="15sp"
                        android:gravity="center"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintLeft_toLeftOf="parent"
                        card_view:layout_constraintRight_toRightOf="parent" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/home-library-icon"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="@color/colorCardBackgroundLight"
                card_view:layout_constraintTop_toBottomOf="@+id/home-search-bar"
                android:layout_marginTop="230dp"
                card_view:layout_constraintRight_toRightOf="parent"
                card_view:layout_constraintLeft_toLeftOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="98dp">

                    <ImageView
                        android:id="@+id/home-library"
                        android:layout_width="45dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/cbooks"
                        card_view:layout_constraintLeft_toLeftOf="parent"
                        card_view:layout_constraintRight_toRightOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/home_icon_close_book_text"
                        android:textSize="20sp"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintLeft_toLeftOf="parent"
                        card_view:layout_constraintRight_toRightOf="parent" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>



</android.support.constraint.ConstraintLayout>